--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <header class="hero">
         <div class="hero-content">
             <!--img src="/api/placeholder/500/100" alt="Kolb Elektro Logo" class="logo"-->
-            <h1>Der Mix aus Verkauf & Büro sind genau dein Ding? ⚡</h1>
+            <h1>Der Mix aus Verkauf & Büro <br> sind genau dein Ding? ⚡</h1>
             <p>Dann suchen wir genau DICH! (m/w/d)</p>
             <a href="mailto:bewerbung@kolb-elektro.de" class="cta-button">
                 📧 Jetzt bewerben
